--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Ignore the 00testBugs folder and output.txt
+#Etc
 00testBugs/
 output.txt
 application.py
+diags/
+Input/latticeConfigurationCard/lattice/
+Backtrace.0.0
+Analyze/simulation.py
+Analyze/simulationtest.py
