--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 output.txt
 application.py
 diags/
+diags.old.*/
 Input/latticeConfigurationCard/lattice/
 Backtrace.0.0
 Analyze/simulation.py
